k8s/apps/external/dify/endpoint-slice.yaml
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: dify
  namespace: dify
  labels:
    kubernetes.io/service-name: dify
    endpointslice.kubernetes.io/managed-by: cluster-admins
addressType: IPv4
ports:
  - name: http
    protocol: TCP
    port: 80
endpoints:
  - addresses:
      - 192.168.1.250
    conditions: {}
