k8s/apps/external/dify/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: dify
  namespace: dify
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
