k8s/apps/external/dify/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dify
  namespace: dify
spec:
  parentRefs:
    - name: external
      namespace: gateway
    - name: internal
      namespace: gateway
  hostnames:
    - "dify.ravil.space"
  rules:
    - backendRefs:
        - name: dify
          port: 80
